# xtensorML

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: example.cpp
include/xtensor_ml/: core.hpp  matrix.hpp
include/xtensor_ml/models/linear/: linear_regression.hpp  logistic.h  logistic.hpp
include/xtensor_ml/trees/: dt.hpp
src/models/linear/: linear_regression.cpp  logistic.cpp
src/models/trees/: dt.cpp
tests/linear_models/: logisitc_test.cpp
tests/trees/: dt_test.cpp
